Bunch of changes + doc on the changes

--- a/notebooks/gears/data_tutorial.ipynb
+++ b/notebooks/gears/data_tutorial.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7bce2d84",
    "metadata": {},
    "outputs": [],
@@ -49,23 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ea020156",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AnnData object with n_obs × n_vars = 310385 × 8563\n",
-       "    obs: 'gem_group', 'gene', 'gene_id', 'transcript', 'gene_transcript', 'sgID_AB', 'mitopercent', 'UMI_count', 'z_gemgroup_UMI', 'core_scale_factor', 'core_adjusted_UMI_count', 'cell_type'\n",
-       "    var: 'gene_name', 'chr', 'start', 'end', 'class', 'strand', 'length', 'in_matrix', 'mean', 'std', 'cv', 'fano', 'gene_id'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import scanpy as sc\n",
     "dd = Catalogue.get_dataset_details('repogle_k562_essential_raw')\n",
@@ -75,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "425f02ae",
    "metadata": {},
    "outputs": [],
@@ -85,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "9678f7f9",
    "metadata": {},
    "outputs": [],
@@ -100,337 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e5d0df6e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gem_group</th>\n",
-       "      <th>gene</th>\n",
-       "      <th>gene_id</th>\n",
-       "      <th>transcript</th>\n",
-       "      <th>gene_transcript</th>\n",
-       "      <th>sgID_AB</th>\n",
-       "      <th>mitopercent</th>\n",
-       "      <th>UMI_count</th>\n",
-       "      <th>z_gemgroup_UMI</th>\n",
-       "      <th>core_scale_factor</th>\n",
-       "      <th>core_adjusted_UMI_count</th>\n",
-       "      <th>cell_type</th>\n",
-       "      <th>condition</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cell_barcode</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>AAACCCAAGAAATCCA-27</th>\n",
-       "      <td>27</td>\n",
-       "      <td>NAF1</td>\n",
-       "      <td>ENSG00000145414</td>\n",
-       "      <td>P1P2</td>\n",
-       "      <td>5449_NAF1_P1P2_ENSG00000145414</td>\n",
-       "      <td>NAF1_+_164087918.23-P1P2|NAF1_-_164087674.23-P1P2</td>\n",
-       "      <td>0.112083</td>\n",
-       "      <td>11438.0</td>\n",
-       "      <td>0.013047</td>\n",
-       "      <td>0.813253</td>\n",
-       "      <td>14064.512695</td>\n",
-       "      <td>k562</td>\n",
-       "      <td>NAF1+ctrl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAACCCAAGAACTTCC-31</th>\n",
-       "      <td>31</td>\n",
-       "      <td>BUB1</td>\n",
-       "      <td>ENSG00000169679</td>\n",
-       "      <td>P1P2</td>\n",
-       "      <td>935_BUB1_P1P2_ENSG00000169679</td>\n",
-       "      <td>BUB1_-_111435363.23-P1P2|BUB1_-_111435372.23-P1P2</td>\n",
-       "      <td>0.179895</td>\n",
-       "      <td>5342.0</td>\n",
-       "      <td>-1.522247</td>\n",
-       "      <td>0.844107</td>\n",
-       "      <td>6328.584473</td>\n",
-       "      <td>k562</td>\n",
-       "      <td>BUB1+ctrl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAACCCAAGAAGCCAC-34</th>\n",
-       "      <td>34</td>\n",
-       "      <td>UBL5</td>\n",
-       "      <td>ENSG00000198258</td>\n",
-       "      <td>P1P2</td>\n",
-       "      <td>9534_UBL5_P1P2_ENSG00000198258</td>\n",
-       "      <td>UBL5_-_9938639.23-P1P2|UBL5_+_9938801.23-P1P2</td>\n",
-       "      <td>0.105287</td>\n",
-       "      <td>17305.0</td>\n",
-       "      <td>0.384157</td>\n",
-       "      <td>1.091537</td>\n",
-       "      <td>15853.792969</td>\n",
-       "      <td>k562</td>\n",
-       "      <td>UBL5+ctrl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAACCCAAGAATAGTC-43</th>\n",
-       "      <td>43</td>\n",
-       "      <td>C9orf16</td>\n",
-       "      <td>ENSG00000171159</td>\n",
-       "      <td>P1P2</td>\n",
-       "      <td>1131_C9orf16_P1P2_ENSG00000171159</td>\n",
-       "      <td>C9orf16_+_130922603.23-P1P2|C9orf16_+_13092264...</td>\n",
-       "      <td>0.099359</td>\n",
-       "      <td>30244.0</td>\n",
-       "      <td>3.721912</td>\n",
-       "      <td>0.948277</td>\n",
-       "      <td>31893.619141</td>\n",
-       "      <td>k562</td>\n",
-       "      <td>C9orf16+ctrl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAACCCAAGACAGCGT-28</th>\n",
-       "      <td>28</td>\n",
-       "      <td>TIMM9</td>\n",
-       "      <td>ENSG00000100575</td>\n",
-       "      <td>P1P2</td>\n",
-       "      <td>8927_TIMM9_P1P2_ENSG00000100575</td>\n",
-       "      <td>TIMM9_-_58893843.23-P1P2|TIMM9_-_58893848.23-P1P2</td>\n",
-       "      <td>0.137623</td>\n",
-       "      <td>8407.0</td>\n",
-       "      <td>-0.975371</td>\n",
-       "      <td>0.868942</td>\n",
-       "      <td>9674.979492</td>\n",
-       "      <td>k562</td>\n",
-       "      <td>TIMM9+ctrl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TTTGTTGTCTGTCGTC-45</th>\n",
-       "      <td>45</td>\n",
-       "      <td>ATP6V1D</td>\n",
-       "      <td>ENSG00000100554</td>\n",
-       "      <td>P1P2</td>\n",
-       "      <td>682_ATP6V1D_P1P2_ENSG00000100554</td>\n",
-       "      <td>ATP6V1D_+_67826485.23-P1P2|ATP6V1D_+_67826497....</td>\n",
-       "      <td>0.100272</td>\n",
-       "      <td>18350.0</td>\n",
-       "      <td>0.428227</td>\n",
-       "      <td>1.115052</td>\n",
-       "      <td>16456.638672</td>\n",
-       "      <td>k562</td>\n",
-       "      <td>ATP6V1D+ctrl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TTTGTTGTCTGTCTCG-27</th>\n",
-       "      <td>27</td>\n",
-       "      <td>CNOT3</td>\n",
-       "      <td>ENSG00000088038</td>\n",
-       "      <td>P1P2</td>\n",
-       "      <td>1718_CNOT3_P1P2_ENSG00000088038</td>\n",
-       "      <td>CNOT3_+_54641532.23-P1P2|CNOT3_-_54641691.23-P1P2</td>\n",
-       "      <td>0.093876</td>\n",
-       "      <td>8671.0</td>\n",
-       "      <td>-0.633593</td>\n",
-       "      <td>0.813253</td>\n",
-       "      <td>10662.125000</td>\n",
-       "      <td>k562</td>\n",
-       "      <td>CNOT3+ctrl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TTTGTTGTCTGTGCGG-44</th>\n",
-       "      <td>44</td>\n",
-       "      <td>METTL3</td>\n",
-       "      <td>ENSG00000165819</td>\n",
-       "      <td>P1P2</td>\n",
-       "      <td>5004_METTL3_P1P2_ENSG00000165819</td>\n",
-       "      <td>METTL3_+_21979431.23-P1P2|METTL3_-_21979084.23...</td>\n",
-       "      <td>0.107983</td>\n",
-       "      <td>20568.0</td>\n",
-       "      <td>1.054624</td>\n",
-       "      <td>0.973352</td>\n",
-       "      <td>21131.095703</td>\n",
-       "      <td>k562</td>\n",
-       "      <td>METTL3+ctrl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TTTGTTGTCTTGCAGA-14</th>\n",
-       "      <td>14</td>\n",
-       "      <td>RPL5</td>\n",
-       "      <td>ENSG00000122406</td>\n",
-       "      <td>P1P2</td>\n",
-       "      <td>7475_RPL5_P1P2_ENSG00000122406</td>\n",
-       "      <td>RPL5_+_93297664.23-P1P2|RPL5_-_93297968.23-P1P2</td>\n",
-       "      <td>0.128225</td>\n",
-       "      <td>23568.0</td>\n",
-       "      <td>1.676254</td>\n",
-       "      <td>1.050055</td>\n",
-       "      <td>22444.542969</td>\n",
-       "      <td>k562</td>\n",
-       "      <td>RPL5+ctrl</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TTTGTTGTCTTTACAC-25</th>\n",
-       "      <td>25</td>\n",
-       "      <td>SEC61B</td>\n",
-       "      <td>ENSG00000106803</td>\n",
-       "      <td>P1P2</td>\n",
-       "      <td>7752_SEC61B_P1P2_ENSG00000106803</td>\n",
-       "      <td>SEC61B_+_101984577.23-P1P2|SEC61B_-_101984591....</td>\n",
-       "      <td>0.095009</td>\n",
-       "      <td>13504.0</td>\n",
-       "      <td>0.341625</td>\n",
-       "      <td>0.855594</td>\n",
-       "      <td>15783.187500</td>\n",
-       "      <td>k562</td>\n",
-       "      <td>SEC61B+ctrl</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>310385 rows × 13 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     gem_group     gene          gene_id transcript  \\\n",
-       "cell_barcode                                                          \n",
-       "AAACCCAAGAAATCCA-27         27     NAF1  ENSG00000145414       P1P2   \n",
-       "AAACCCAAGAACTTCC-31         31     BUB1  ENSG00000169679       P1P2   \n",
-       "AAACCCAAGAAGCCAC-34         34     UBL5  ENSG00000198258       P1P2   \n",
-       "AAACCCAAGAATAGTC-43         43  C9orf16  ENSG00000171159       P1P2   \n",
-       "AAACCCAAGACAGCGT-28         28    TIMM9  ENSG00000100575       P1P2   \n",
-       "...                        ...      ...              ...        ...   \n",
-       "TTTGTTGTCTGTCGTC-45         45  ATP6V1D  ENSG00000100554       P1P2   \n",
-       "TTTGTTGTCTGTCTCG-27         27    CNOT3  ENSG00000088038       P1P2   \n",
-       "TTTGTTGTCTGTGCGG-44         44   METTL3  ENSG00000165819       P1P2   \n",
-       "TTTGTTGTCTTGCAGA-14         14     RPL5  ENSG00000122406       P1P2   \n",
-       "TTTGTTGTCTTTACAC-25         25   SEC61B  ENSG00000106803       P1P2   \n",
-       "\n",
-       "                                       gene_transcript  \\\n",
-       "cell_barcode                                             \n",
-       "AAACCCAAGAAATCCA-27     5449_NAF1_P1P2_ENSG00000145414   \n",
-       "AAACCCAAGAACTTCC-31      935_BUB1_P1P2_ENSG00000169679   \n",
-       "AAACCCAAGAAGCCAC-34     9534_UBL5_P1P2_ENSG00000198258   \n",
-       "AAACCCAAGAATAGTC-43  1131_C9orf16_P1P2_ENSG00000171159   \n",
-       "AAACCCAAGACAGCGT-28    8927_TIMM9_P1P2_ENSG00000100575   \n",
-       "...                                                ...   \n",
-       "TTTGTTGTCTGTCGTC-45   682_ATP6V1D_P1P2_ENSG00000100554   \n",
-       "TTTGTTGTCTGTCTCG-27    1718_CNOT3_P1P2_ENSG00000088038   \n",
-       "TTTGTTGTCTGTGCGG-44   5004_METTL3_P1P2_ENSG00000165819   \n",
-       "TTTGTTGTCTTGCAGA-14     7475_RPL5_P1P2_ENSG00000122406   \n",
-       "TTTGTTGTCTTTACAC-25   7752_SEC61B_P1P2_ENSG00000106803   \n",
-       "\n",
-       "                                                               sgID_AB  \\\n",
-       "cell_barcode                                                             \n",
-       "AAACCCAAGAAATCCA-27  NAF1_+_164087918.23-P1P2|NAF1_-_164087674.23-P1P2   \n",
-       "AAACCCAAGAACTTCC-31  BUB1_-_111435363.23-P1P2|BUB1_-_111435372.23-P1P2   \n",
-       "AAACCCAAGAAGCCAC-34      UBL5_-_9938639.23-P1P2|UBL5_+_9938801.23-P1P2   \n",
-       "AAACCCAAGAATAGTC-43  C9orf16_+_130922603.23-P1P2|C9orf16_+_13092264...   \n",
-       "AAACCCAAGACAGCGT-28  TIMM9_-_58893843.23-P1P2|TIMM9_-_58893848.23-P1P2   \n",
-       "...                                                                ...   \n",
-       "TTTGTTGTCTGTCGTC-45  ATP6V1D_+_67826485.23-P1P2|ATP6V1D_+_67826497....   \n",
-       "TTTGTTGTCTGTCTCG-27  CNOT3_+_54641532.23-P1P2|CNOT3_-_54641691.23-P1P2   \n",
-       "TTTGTTGTCTGTGCGG-44  METTL3_+_21979431.23-P1P2|METTL3_-_21979084.23...   \n",
-       "TTTGTTGTCTTGCAGA-14    RPL5_+_93297664.23-P1P2|RPL5_-_93297968.23-P1P2   \n",
-       "TTTGTTGTCTTTACAC-25  SEC61B_+_101984577.23-P1P2|SEC61B_-_101984591....   \n",
-       "\n",
-       "                     mitopercent  UMI_count  z_gemgroup_UMI  \\\n",
-       "cell_barcode                                                  \n",
-       "AAACCCAAGAAATCCA-27     0.112083    11438.0        0.013047   \n",
-       "AAACCCAAGAACTTCC-31     0.179895     5342.0       -1.522247   \n",
-       "AAACCCAAGAAGCCAC-34     0.105287    17305.0        0.384157   \n",
-       "AAACCCAAGAATAGTC-43     0.099359    30244.0        3.721912   \n",
-       "AAACCCAAGACAGCGT-28     0.137623     8407.0       -0.975371   \n",
-       "...                          ...        ...             ...   \n",
-       "TTTGTTGTCTGTCGTC-45     0.100272    18350.0        0.428227   \n",
-       "TTTGTTGTCTGTCTCG-27     0.093876     8671.0       -0.633593   \n",
-       "TTTGTTGTCTGTGCGG-44     0.107983    20568.0        1.054624   \n",
-       "TTTGTTGTCTTGCAGA-14     0.128225    23568.0        1.676254   \n",
-       "TTTGTTGTCTTTACAC-25     0.095009    13504.0        0.341625   \n",
-       "\n",
-       "                     core_scale_factor  core_adjusted_UMI_count cell_type  \\\n",
-       "cell_barcode                                                                \n",
-       "AAACCCAAGAAATCCA-27           0.813253             14064.512695      k562   \n",
-       "AAACCCAAGAACTTCC-31           0.844107              6328.584473      k562   \n",
-       "AAACCCAAGAAGCCAC-34           1.091537             15853.792969      k562   \n",
-       "AAACCCAAGAATAGTC-43           0.948277             31893.619141      k562   \n",
-       "AAACCCAAGACAGCGT-28           0.868942              9674.979492      k562   \n",
-       "...                                ...                      ...       ...   \n",
-       "TTTGTTGTCTGTCGTC-45           1.115052             16456.638672      k562   \n",
-       "TTTGTTGTCTGTCTCG-27           0.813253             10662.125000      k562   \n",
-       "TTTGTTGTCTGTGCGG-44           0.973352             21131.095703      k562   \n",
-       "TTTGTTGTCTTGCAGA-14           1.050055             22444.542969      k562   \n",
-       "TTTGTTGTCTTTACAC-25           0.855594             15783.187500      k562   \n",
-       "\n",
-       "                        condition  \n",
-       "cell_barcode                       \n",
-       "AAACCCAAGAAATCCA-27     NAF1+ctrl  \n",
-       "AAACCCAAGAACTTCC-31     BUB1+ctrl  \n",
-       "AAACCCAAGAAGCCAC-34     UBL5+ctrl  \n",
-       "AAACCCAAGAATAGTC-43  C9orf16+ctrl  \n",
-       "AAACCCAAGACAGCGT-28    TIMM9+ctrl  \n",
-       "...                           ...  \n",
-       "TTTGTTGTCTGTCGTC-45  ATP6V1D+ctrl  \n",
-       "TTTGTTGTCTGTCTCG-27    CNOT3+ctrl  \n",
-       "TTTGTTGTCTGTGCGG-44   METTL3+ctrl  \n",
-       "TTTGTTGTCTTGCAGA-14     RPL5+ctrl  \n",
-       "TTTGTTGTCTTTACAC-25   SEC61B+ctrl  \n",
-       "\n",
-       "[310385 rows x 13 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "adata.obs"
    ]
@@ -447,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e2168ac7",
    "metadata": {},
    "outputs": [],
@@ -472,24 +132,38 @@
    "execution_count": null,
    "id": "9fd5e2ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found local copy...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
     "from omnicell.models.gears.pertdata import PertData\n",
     "\n",
     "pert_data = PertData('./data') # specific saved folder\n",
-    "pert_data.new_data_process(dataset_name = 'satija', adata = adata) # specific dataset name and adata object\n",
+    "pert_data.new_data_process(dataset_name = 'repogle', adata = adata, skip_calc_de=True) # specific dataset name and adata object\n",
     "print(f\"Data processed and saved in {pert_data.data_path}\")\n",
-    "pert_data.load(data_path = './data/satija') # load the processed data, the path is saved folder + dataset_name\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cc8e5474",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pert_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpert_data\u001b[49m\u001b[38;5;241m.\u001b[39mload(data_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./data/repogle\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;66;03m# load the processed data, the path is saved folder + dataset_name\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mData loaded from \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpert_data\u001b[38;5;241m.\u001b[39mdata_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m pert_data\u001b[38;5;241m.\u001b[39mprepare_split(split \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msimulation\u001b[39m\u001b[38;5;124m'\u001b[39m, seed \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;66;03m# get data split with seed\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pert_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "pert_data.load(data_path = './data/repogle') # load the processed data, the path is saved folder + dataset_name\n",
     "print(f\"Data loaded from {pert_data.data_path}\")\n",
     "pert_data.prepare_split(split = 'simulation', seed = 1) # get data split with seed\n",
     "print(f\"Data split with seed 1\")\n",
