Final fix to gears

--- a/notebooks/gears/model_tutorial.ipynb
+++ b/notebooks/gears/model_tutorial.ipynb
@@ -2,23 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/dfs/user/kexinh/miniconda3/envs/eee/lib/python3.8/site-packages/statsmodels/compat/pandas.py:61: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import Int64Index as NumericIndex\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../')\n",
+    "sys.path.append('../../')\n",
+    "from omnicell.constants import *\n",
     "\n",
-    "from gears import PertData, GEARS"
+    "from omnicell.models.gears.gears import GEARS\n",
+    "from omnicell.models.gears.pertdata import PertData\n",
+    "from omnicell.data.catalogue import Catalogue"
    ]
   },
   {
@@ -30,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -38,17 +32,31 @@
      "output_type": "stream",
      "text": [
       "Found local copy...\n",
+      "Found local copy...\n",
+      "Found local copy...\n",
+      "These perturbations are not in the GO graph and their perturbation can thus not be predicted\n",
+      "['RHOXF2BB+ctrl' 'LYL1+IER5L' 'ctrl+IER5L' 'KIAA1804+ctrl' 'IER5L+ctrl'\n",
+      " 'RHOXF2BB+ZBTB25' 'RHOXF2BB+SET']\n",
       "Local copy of pyg dataset is detected. Loading...\n",
       "Done!\n",
       "Local copy of split is detected. Loading...\n",
       "Simulation split test composition:\n",
       "combo_seen0:9\n",
-      "combo_seen1:52\n",
-      "combo_seen2:18\n",
-      "unseen_single:37\n",
+      "combo_seen1:43\n",
+      "combo_seen2:19\n",
+      "unseen_single:36\n",
       "Done!\n",
       "Creating dataloaders....\n",
+      "/orcd/data/omarabu/001/opitcho/miniforge3/envs/omnicell/lib/python3.9/site-packages/torch_geometric/deprecation.py:26: UserWarning: 'data.DataLoader' is deprecated, use 'loader.DataLoader' instead\n",
+      "  warnings.warn(out)\n",
       "Done!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "here1\n"
      ]
     }
    ],
@@ -56,7 +64,29 @@
     "pert_data = PertData('./data')\n",
     "pert_data.load(data_name = 'norman')\n",
     "pert_data.prepare_split(split = 'simulation', seed = 1)\n",
-    "pert_data.get_dataloader(batch_size = 32, test_batch_size = 128)"
+    "pert_data.get_dataloader(batch_size = 32, test_batch_size = 128)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2f49a771",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['non_dropout_gene_idx', 'non_zeros_gene_idx', 'rank_genes_groups_cov_all', 'top_non_dropout_de_20', 'top_non_zero_de_20'])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pert_data.adata.uns.keys()"
    ]
   },
   {
@@ -68,11 +98,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Numba: Attempted to fork from a non-main thread, the TBB library may be in an invalid state in the child process.\n",
+      "Numba: Attempted to fork from a non-main thread, the TBB library may be in an invalid state in the child process.\n",
+      "/orcd/data/omarabu/001/opitcho/omnicell/notebooks/gears/../../omnicell/models/gears/utils.py:46: RuntimeWarning: invalid value encountered in divide\n",
+      "  result = np.matmul(xv.transpose(), yv) / np.sqrt(np.outer(xvss, yvss))\n",
+      "Found local copy...\n"
+     ]
+    }
+   ],
    "source": [
-    "gears_model = GEARS(pert_data, device = 'cuda:7', \n",
+    "gears_model = GEARS(pert_data, device = 'cuda', \n",
     "                        weight_bias_track = False, \n",
     "                        proj_name = 'pertnet', \n",
     "                        exp_name = 'pertnet')\n",
@@ -88,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +148,7 @@
        " 'direction_lambda': 'regularization term to balance direction loss and prediction loss, default 1'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -135,79 +177,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Start Training...\n",
-      "Epoch 1 Step 1 Train Loss: 0.5698\n",
-      "Epoch 1 Step 51 Train Loss: 0.4839\n",
-      "Epoch 1 Step 101 Train Loss: 0.4901\n",
-      "Epoch 1 Step 151 Train Loss: 0.4075\n",
-      "Epoch 1 Step 201 Train Loss: 0.5746\n",
-      "Epoch 1 Step 251 Train Loss: 0.4715\n",
-      "Epoch 1 Step 301 Train Loss: 0.4592\n",
-      "Epoch 1 Step 351 Train Loss: 0.4402\n",
-      "Epoch 1 Step 401 Train Loss: 0.5056\n",
-      "Epoch 1 Step 451 Train Loss: 0.4829\n",
-      "Epoch 1 Step 501 Train Loss: 0.3779\n",
-      "Epoch 1 Step 551 Train Loss: 0.5310\n",
-      "Epoch 1 Step 601 Train Loss: 0.4236\n",
-      "Epoch 1 Step 651 Train Loss: 0.3958\n",
-      "Epoch 1 Step 701 Train Loss: 0.4064\n",
-      "Epoch 1 Step 751 Train Loss: 0.4564\n",
-      "Epoch 1 Step 801 Train Loss: 0.5437\n",
-      "Epoch 1 Step 851 Train Loss: 0.4514\n",
-      "Epoch 1 Step 901 Train Loss: 0.3983\n",
-      "Epoch 1 Step 951 Train Loss: 0.3882\n",
-      "Epoch 1 Step 1001 Train Loss: 0.4543\n",
-      "Epoch 1 Step 1051 Train Loss: 0.4775\n",
-      "Epoch 1 Step 1101 Train Loss: 0.4316\n",
-      "Epoch 1 Step 1151 Train Loss: 0.4562\n",
-      "Epoch 1 Step 1201 Train Loss: 0.4734\n",
-      "Epoch 1 Step 1251 Train Loss: 0.4545\n",
-      "Epoch 1 Step 1301 Train Loss: 0.5209\n",
-      "Epoch 1 Step 1351 Train Loss: 0.4603\n",
-      "Epoch 1 Step 1401 Train Loss: 0.4277\n",
-      "Epoch 1 Step 1451 Train Loss: 0.5338\n",
-      "Epoch 1 Step 1501 Train Loss: 0.4677\n",
-      "Epoch 1 Step 1551 Train Loss: 0.5447\n",
-      "Epoch 1 Step 1601 Train Loss: 0.4739\n",
-      "Epoch 1: Train Overall MSE: 0.0061 Validation Overall MSE: 0.0069. \n",
-      "Train Top 20 DE MSE: 0.1758 Validation Top 20 DE MSE: 0.2167. \n",
-      "Done!\n",
-      "Start Testing...\n",
-      "Best performing model: Test Top 20 DE MSE: 0.2540\n",
-      "Start doing subgroup analysis for simulation split...\n",
-      "test_combo_seen0_mse: 0.008835521\n",
-      "test_combo_seen0_pearson: 0.97467689912096\n",
-      "test_combo_seen0_mse_de: 0.23602708\n",
-      "test_combo_seen0_pearson_de: 0.8291576005698412\n",
-      "test_combo_seen1_mse: 0.011588639\n",
-      "test_combo_seen1_pearson: 0.9693566612929557\n",
-      "test_combo_seen1_mse_de: 0.283049\n",
-      "test_combo_seen1_pearson_de: 0.824893174623376\n",
-      "test_combo_seen2_mse: 0.008265204\n",
-      "test_combo_seen2_pearson: 0.9767816770874406\n",
-      "test_combo_seen2_mse_de: 0.23843616\n",
-      "test_combo_seen2_pearson_de: 0.9310945429439097\n",
-      "test_unseen_single_mse: 0.005175899\n",
-      "test_unseen_single_pearson: 0.9848590164640408\n",
-      "test_unseen_single_mse_de: 0.22512747\n",
-      "test_unseen_single_pearson_de: 0.8633892815507775\n",
-      "test_combo_seen0_pearson_delta: 0.47928598136890105\n",
-      "test_combo_seen0_frac_opposite_direction_top20_non_dropout: 0.1388888888888889\n",
-      "test_combo_seen0_frac_sigma_below_1_non_dropout: 0.8333333333333333\n",
-      "test_combo_seen0_mse_top20_de_non_dropout: 0.28635967\n",
-      "test_combo_seen1_pearson_delta: 0.46109917867026595\n",
-      "test_combo_seen1_frac_opposite_direction_top20_non_dropout: 0.16346153846153846\n",
-      "test_combo_seen1_frac_sigma_below_1_non_dropout: 0.7605769230769232\n",
-      "test_combo_seen1_mse_top20_de_non_dropout: 0.33671263\n",
-      "test_combo_seen2_pearson_delta: 0.4869598740235377\n",
-      "test_combo_seen2_frac_opposite_direction_top20_non_dropout: 0.10555555555555557\n",
-      "test_combo_seen2_frac_sigma_below_1_non_dropout: 0.875\n",
-      "test_combo_seen2_mse_top20_de_non_dropout: 0.24442989\n",
-      "test_unseen_single_pearson_delta: 0.24608358110563455\n",
-      "test_unseen_single_frac_opposite_direction_top20_non_dropout: 0.32837837837837835\n",
-      "test_unseen_single_frac_sigma_below_1_non_dropout: 0.7959459459459457\n",
-      "test_unseen_single_mse_top20_de_non_dropout: 0.25129005\n",
-      "Done!\n"
+      "Start Training...\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (5045) must match the size of tensor b (3) at non-singleton dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mgears_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mepochs\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlr\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1e-3\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/orcd/data/omarabu/001/opitcho/omnicell/notebooks/gears/../../omnicell/models/gears/gears.py:527\u001b[0m, in \u001b[0;36mGEARS.train\u001b[0;34m(self, epochs, lr, weight_decay)\u001b[0m\n\u001b[1;32m    525\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    526\u001b[0m     pred \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel(batch)\n\u001b[0;32m--> 527\u001b[0m     loss \u001b[38;5;241m=\u001b[39m \u001b[43mloss_fct\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpred\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpert\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    528\u001b[0m \u001b[43m                  \u001b[49m\u001b[43mctrl\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mctrl_expression\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m    529\u001b[0m \u001b[43m                  \u001b[49m\u001b[43mdict_filter\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdict_filter\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    530\u001b[0m \u001b[43m                  \u001b[49m\u001b[43mdirection_lambda\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdirection_lambda\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    531\u001b[0m loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m    532\u001b[0m nn\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mclip_grad_value_(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mparameters(), clip_value\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m)\n",
+      "File \u001b[0;32m/orcd/data/omarabu/001/opitcho/omnicell/notebooks/gears/../../omnicell/models/gears/utils.py:418\u001b[0m, in \u001b[0;36mloss_fct\u001b[0;34m(pred, y, perts, ctrl, direction_lambda, dict_filter)\u001b[0m\n\u001b[1;32m    416\u001b[0m     pred_p \u001b[38;5;241m=\u001b[39m pred[pert_idx]\n\u001b[1;32m    417\u001b[0m     y_p \u001b[38;5;241m=\u001b[39m y[pert_idx]\n\u001b[0;32m--> 418\u001b[0m losses \u001b[38;5;241m=\u001b[39m losses \u001b[38;5;241m+\u001b[39m torch\u001b[38;5;241m.\u001b[39msum((\u001b[43mpred_p\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my_p\u001b[49m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m+\u001b[39m gamma))\u001b[38;5;241m/\u001b[39mpred_p\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m/\u001b[39mpred_p\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m    420\u001b[0m \u001b[38;5;66;03m## direction loss\u001b[39;00m\n\u001b[1;32m    421\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (p\u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mctrl\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (5045) must match the size of tensor b (3) at non-singleton dimension 1"
      ]
     }
    ],
@@ -241,23 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'FEV': array([-1.5115363e-06,  4.4304952e-02,  1.0309354e-01, ...,\n",
-       "         3.3967001e+00,  7.8529231e-03,  1.0920237e-31], dtype=float32),\n",
-       " 'FEV_SAMD11': array([-2.2916190e-06,  9.7577907e-02,  1.6493453e-01, ...,\n",
-       "         3.2082996e+00,  7.6769367e-03,  1.7619579e-31], dtype=float32)}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gears_model.predict([['FEV'], ['FEV', 'AHR']])"
    ]
@@ -271,20 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['RP11-34P13.8', 'RP11-54O7.3', 'SAMD11', 'PERM1', 'HES4']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gears_model.gene_list[:5]"
    ]
@@ -292,7 +250,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "omnicell",
    "language": "python",
    "name": "python3"
   },
@@ -306,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
